--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,14 @@
 /yarn-error.log
 yarn-debug.log*
 .yarn-integrity
+
+# Ignore bundler config
+/.bundle
+
+# Ignore the default SQLite database.
+/db/*.sqlite3
+
+# Ignore all logfiles and tempfiles.
+/.idea
+/.idea *
+.idea/workspace.xml
