--- a/test/fixtures/answers.yml
+++ b/test/fixtures/answers.yml
@@ -2,10 +2,8 @@
 
 one:
   body: MyString
-  question_id: 1
-  user_id: 1
+  question_id: 
 
 two:
   body: MyString
-  question_id: 1
-  user_id: 1
+  question_id: 
