--- a/test/fixtures/tests.yml
+++ b/test/fixtures/tests.yml
@@ -3,9 +3,9 @@
 one:
   title: MyString
   level: 1
-  category_id: 1
+  category_id: 
 
 two:
   title: MyString
   level: 1
-  category_id: 1
+  category_id: 
